# env_model-risk-management

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
banking_mrm/: __init__.py
configs/: endpoints.py
data/: dataset.jsonl
outputs/evals/: analysis_report.html  comparative_analysis_report.html  gpt4_comparative_analysis.html
outputs/evals/banking-mrm--gpt-4.1-nano/3ab215d6/: metadata.json  results.jsonl
outputs/evals/banking-mrm--gpt-4.1/3320682e/: metadata.json  results.jsonl
outputs/evals/banking-mrm--gpt-4.1/a30e8f9f/: metadata.json  results.jsonl
outputs/evals/banking-mrm--gpt-5-nano/8e5dc923/: analysis.html  metadata.json  results.jsonl  summary.json
outputs/evals/banking-mrm--gpt-5/b5e2beec/: metadata.json  results.jsonl
scripts/: analyze_results.py  annotate_dataset.py  baseline_policy.py  validate_dataset.py
vf_mrm_mini/: __init__.py
vf_mrm_mini/data/: dataset.jsonl  sources.json
