[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "banking-mrm"
version = "0.1.4"
description = "Banking Model Risk Management: RL and evaluation environment for SR 11-7 and OCC MRM"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "verifiers>=0.1.1",
    "datasets>=2.18.0",
]
keywords = ["verifiers", "environment", "banking", "model-risk", "OCC", "SR11-7", "MRM"]

[tool.vf]
# Unique identifier for the environment when published to Prime Intellect’s hub
id = "banking-model-risk-management"
# Tags help others discover the environment
tags = [
    "model-risk",
    "bank-supervision",
    "banking",
    "mrm",
    "governance",
    "validation",
    "citations",
    "single-turn",
]
title = "Banking Model Risk Management"

[tool.hatch.build]
include = [
  "vf_mrm_mini/**/*.py",
  "banking_mrm/**/*.py",
  "vf_mrm_mini/data/*.jsonl",
  "vf_mrm_mini/data/*.json",
  "README.md",
]
